_sass/main.scss
$primary-color: #bdbfc6;
$active-link-color: #ffffff;
$link-color: rgb(255, 198, 198);
$accent-color: #fb0300;
$sm: 576px;
$md: 768px;
$lg: 992px;
$xl: 1200px; 

body {
    background-color: rgba(255, 255, 255, 0.934);
}

main > .container {
    padding: 300px 15px 0;

    &.nav-up {
        padding-top: 80px;
    }

    @media (min-width: $md) {
        padding-top: 375px;
    }

    @media (min-width: $lg) {
        padding-top: 475px;
    }

    @media (min-width: $xl) {
        padding-top: 550px;
    }
}

.footer {
    background-color: #f5f5f5;

    & > .container {
        padding-right: 15px;
        padding-left: 15px;
    }
}

ul {
    &.no-bullets {
        list-style-type: none;
        padding-inline-start: 0;
    }

    &.archive-list {
        padding-inline-start: 1em;
    }
}

.twitter-link, .twitter-link:hover {
    color: #1da1f2;
}

.github-link, .github-link:hover {
    color: #000000;
}

.instagram-link, .instagram-link:hover {
    color: #3f729b;
}

div.highlighter-rouge {
    background-color: #f5f5f5;
    border: 1px solid #e8e8e8;
    padding: 10px;
}

p {
    margin-top: 1rem;
}

li > a.active, li > a:hover {
    color: $accent-color;
}

li > a {
    color: darken($primary-color, 30%);
}

.banner-container {
    background-color: rgba(255, 255, 255, 1);
    transition: top 0.2s ease-in-out;
    
    @media (max-width: 375.5px) {
        .col-md-9 {
            padding-left: 0;
            padding-right: 0;
        }
    }

    .banner {
        background-image: url("/assets/images/banner_mobile.png");
        background-repeat: no-repeat;
        height: 215px;
    }

    &.nav-up {
        top: -215px;
    }

    @media (min-width: $md) {
        .banner {
            background-image: url("/assets/images/banner-md.png");
            height: 290px;
        }
        
        &.nav-up {
            top: -290px;
        }
    }

    @media (min-width: $lg) {
        .banner {
            background-image: url('/assets/images/banner-lg.png');
            height: 390px;
        }

        &.nav-up {
            top: -390px;
        }
    }

    @media (min-width: $xl) {
        .banner {
            background-image: url("/assets/images/banner-xl.png");
            height: 465px;
        }

        &.nav-up {
            top: -465px;
        }
    }
}

.navbar {
    background-color: $accent-color;
    transition: top 0.2s ease-in-out;

    &.fixed-top {
        &.nav-up {
            top: 0;
            border-top: 0;
        }
        &.nav-down {
            top: 215px;
            border-top: 5px solid rgba(255, 255, 255, 1);

            @media (min-width: $md) {
                top: 290px;
            }

            @media (min-width: $lg) {
                top: 390px;
            }

            @media (min-width: $xl) {
                top: 465px;
            }
        }
    }

    .navbar-nav .nav-item {
        &.active .nav-link, .nav-link:hover {
            color: $active-link-color;
        }

        .nav-link {
            color: $link-color;
        }
    }

    .navbar-toggler {
        color: $primary-color;
    }

    .navbar-brand.mobile {
        & > img {
            display: none;
        }

        &.nav-up > img {
            display: inherit;
        }

        @media (min-width: $md) {
            & > img, &.nav-up > img {
                display: none;
            }
        }
    }

    .navbar-brand.full-menu {
        display: none;

        @media (min-width: $md) {
            &.nav-up {
                display: inherit;
            }
        }
    }
}

